fixed spacing of certain components to suit mobile

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,10 @@ body {
   padding-top:1vw;
   font-size:2vw;
   text-align: center;
-
 }
-
+.subText{
+  font-size:1.7vw;
+}
 
 
 .gs{
@@ -75,6 +76,7 @@ body {
   border-style:solid;
   object-fit: cover;
   object-position: -2vw 0px;
+  float:right;
 }
 
 /*Layout*/
@@ -261,6 +263,9 @@ input[type=text]:focus{
     max-width: 45vh;
     margin-top:0;
   }
+  .gamePhone{
+    font-size: 2vh;
+  }
   .phone{
     margin-top:0;
   }
@@ -270,6 +275,18 @@ input[type=text]:focus{
   .frontLogo{
     height:25vw;
     width:25vw;
+    float: none;
+  }
+  .subFront{
+    font-size:3vw;
+  }
+  .imgFront{
+    height:24vw;
+    object-position:0 -5px;
+  }
+  .listFront{
+    text-indent: 0;
+    margin-right:30px;
   }
 }
 
@@ -298,8 +315,7 @@ color:white;
   background-color: none;
   /* padding: 10px; */
   /* right:7%; */
-  font: 20px "Times New Roman", Futura, Serif;
-  font-size: 2.1ex;
+  font: 10px "Times New Roman", Futura, Serif;
   font-size: 3vh;
   /* bottom: 54%; */
   color:white;
@@ -384,6 +400,11 @@ color:white;
   background: white;
   height:75vh;
 }
+
+.aboutLists{
+  text-indent: 6vw;
+}
+
 .space{
   margin-bottom:10px;
 }
@@ -477,7 +498,7 @@ color:white;
 .overlay .closebtn {
   position: absolute;
   top: 20px;
-  right: 45px;
+  right: 5px;
   font-size: 60px;
 }
 
